--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "ES1-Demo.sln"
+    "dotnet.defaultSolution": "dervieux_guillaume_tp1.sln"
 }
